# backend/internal/dto/example.go
@@ -9,3 +9,13 @@ type EmailInput struct {
 	Subject string `json:"subject" binding:"required"`
 	Message string `json:"message" binding:"required"`
 }
+
+type SignInInput struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
+
+type TokenResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
